--- a/index.html
+++ b/index.html
@@ -17,6 +17,25 @@
     <span>Kalpasus</span>
   </div>
 
+  <div class="row bg-info mt-3">
+    <div class="dflex px-5 py-3 fw-bold">
+      <span>Hola</span>
+    </div>
+  </div>
+
+  <div class="container bg-warning mt-3">
+    <div class="row justify-content-center border border-3 border-dark">
+      <div class="col p-3 fw-bold bg-primary">Hola</div>
+      <div class="col p-3 fw-bold bg-info">Hola</div>      
+    </div>
+    <div class="row justify-content-start border border-3 border-danger">
+      <div class="col-2 p-3 fw-bold bg-info">Hola</div>
+      <div class="col-6 p-3 fw-bold bg-info">Hola</div>
+    </div>
+  </div>
+
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
