--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">  
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,16 +16,69 @@
     <i class="oi bi bi-yin-yang"></i>
     <span>Kalpasus Perú</span>
   </div>
-  
+
   <div class="container mt-5 bg-info">
     <div class="row bg-warning">
       <div class="col-12 col-md-4">Columna 1</div>
       <div class="col-12 col-md-4">Columna 2</div>
       <div class="col-12 col-md-4">Columna 3</div>
-      <div class="col-12 col-md-4" >Columna 4</div>
+      <div class="col-12 col-md-4">Columna 4</div>
     </div>
   </div>
 
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-md-9 border border-2 border-info p-3">.col-md-9</div>
+      <div class="col-md-3 border border-2 border-info p-3">.col-md-3</div>
+    </div>
+  </div>
+
+  <div class="container mt-5 border border-2 border-info p-5 rounded-1">
+    <form>
+      <div class="form-group">
+        <label for="inputEmail">Email address</label>
+        <input type="email" class="form-control" id="inputEmail" placeholder="Enter email">
+      </div>
+    </form>
+  </div>
+
+  <div class="container my-5">
+    <div class="row">
+      <div class="col-4  px-1 px-md-5">
+        <div class="card">
+          <div class="card-header">Header</div>
+          <div class="card-body altura">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text...</p>
+          </div>
+          <div class="card-footer">Footer</div>
+        </div>
+      </div>
+      <div class="col-4 px-1 px-md-5">
+        <div class="card">
+          <div class="card-header">Header</div>
+          <div class="card-body altura">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text...</p>
+          </div>
+          <div class="card-footer">Footer</div>
+        </div>
+      </div>
+      <div class="col-4  px-1 px-md-5">
+        <div class="card">
+          <div class="card-header">Header</div>
+          <div class="card-body altura">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text...</p>
+          </div>
+          <div class="card-footer">Footer</div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
